# ccam

./: CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
shell/: ccam.bash  ccam.fish  ccam.zsh
src/: claude.rs  config.rs  confirm.rs  lib.rs  main.rs
src/commands/: add.rs  env.rs  init.rs  keychain.rs  list.rs  login.rs  mod.rs  remove.rs  status.rs
tests/: claude.rs  config.rs  display.rs  integration.rs  remove_cmd.rs  scenarios.rs  shared_path_active.rs  shell_integration.rs  status.rs  use_cmd.rs
