[package]
name = "ccam"
version = "0.1.0"
edition = "2024"
description = "Claude Code multi-account manager"

[[bin]]
name = "ccam"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
colored = "2"
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
